Fixed problem with alignment of data navigation.

--- a/resources/sass/general.scss
+++ b/resources/sass/general.scss
@@ -42,9 +42,6 @@ a {
 .columns {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: space-between;
     align-items: baseline;
-
-    > * {
-        flex: 1 100%;
-    }
 }
